--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry excluding="**" kind="src" output="target/test-classes" path="src/test/resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER"/>
+	<classpathentry kind="lib" path="/Users/juandamasceno/Desenvolvimento/Frameworks/PTStemmer-2.0-Java/PTStemmer_v2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
