--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,27 @@
   		<groupId>org.mongodb</groupId>
   		<artifactId>mongo-hadoop-core</artifactId>
   		<version>1.0.0</version>
+  		<exclusions>
+  			<exclusion>
+  				<artifactId>mongo-java-driver</artifactId>
+  				<groupId>org.mongodb</groupId>
+  			</exclusion>
+  		</exclusions>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.apache.mahout</groupId>
+  		<artifactId>mahout-core</artifactId>
+  		<version>0.7</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.mongodb</groupId>
+  		<artifactId>mongo-java-driver</artifactId>
+  		<version>2.8.0-RC1</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.apache.mahout</groupId>
+  		<artifactId>mahout-utils</artifactId>
+  		<version>0.5</version>
   	</dependency>
   </dependencies>
 </project>
